...
    >
      <Tab.Screen
        name="Home"
        component={HomeStackNavigator}
        options={{
          headerShown: false,
          tabBarButtonTestID: 'tab-home',
          tabBarIcon: ({ color, size }) => (
            <MaterialCommunityIcons name="home" color={color} size={size} />
          ),
        }}
        listeners={({ navigation }) => ({
          tabPress: () => {
...
      />
      <Tab.Screen
        name="Practice"
        component={PracticeStackNavigator}
        options={{
          headerShown: false,
          tabBarButtonTestID: 'tab-practice',
          tabBarIcon: ({ color, size }) => (
            <MaterialCommunityIcons name="school" color={color} size={size} />
          ),
        }}
        listeners={({ navigation }) => ({
          tabPress: () => {
...
